--- a/src/partials/catalogCard.html
+++ b/src/partials/catalogCard.html
@@ -53,7 +53,7 @@
       <h3 class="card__title">Диван тканевый
         <span class="card__title-model"><no-typography>“D-31”</no-typography></span></h3>
       <span class="card__price">28 490 руб</span>
-      <a href="#no-scrolling" class="card__link btn-all">Купить</a>
+      <a href="product.html" class="card__link btn-all">Купить</a>
     </article>
   </li>
   <li class="card__item swiper-slide">
