feat: add slider in page product

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -49,4 +49,5 @@
 @import "./components/catalogDropfilterCategory";
 @import "./components/catalogDropfilterPrice";
 @import "./components/catalogDropfilterDiscount";
+@import "./components/productInfoFirst";
 
