--- a/src/partials/productD-31InfoFirst.html
+++ b/src/partials/productD-31InfoFirst.html
@@ -1,9 +1,10 @@
 <div class="container">
+  @include('productModalImage.html')
   <div class="product__info-first">
     <div class="swiper product-large product__info-large">
       <ul class="list-reset swiper-wrapper">
         <li class="swiper-slide product__info-slide">
-          <button class="btn-reset product__swiper-btn">
+          <button class="btn-reset product__swiper-btn product-button" data-graph-path="large">
             <picture>
               <source srcset="img/productD-31/1920img1d31@x1.avif" type="image/avif">
               <source srcset="img/productD-31/1920img1d31@x1.webp" type="image/webp">
@@ -13,7 +14,7 @@
           </button>
         </li>
         <li class="swiper-slide product__info-slide">
-          <button class="btn-reset product__swiper-btn">
+          <button class="btn-reset product__swiper-btn product-button" data-graph-path="large">
             <picture>
               <source srcset="img/productD-31/1920img2d31@x1.avif" type="image/avif">
               <source srcset="img/productD-31/1920img2d31@x1.webp" type="image/webp">
@@ -23,7 +24,7 @@
           </button>
         </li>
         <li class="swiper-slide product__info-slide">
-          <button class="btn-reset product__swiper-btn">
+          <button class="btn-reset product__swiper-btn product-button" data-graph-path="large">
             <picture>
               <source srcset="img/productD-31/1920img3d31@x1.avif" type="image/avif">
               <source srcset="img/productD-31/1920img3d31@x1.webp" type="image/webp">
@@ -33,7 +34,7 @@
           </button>
         </li>
         <li class="swiper-slide product__info-slide">
-          <button class="btn-reset product__swiper-btn">
+          <button class="btn-reset product__swiper-btn product-button" data-graph-path="large">
             <picture>
               <source srcset="img/productD-31/1920img4d31@x1.avif" type="image/avif">
               <source srcset="img/productD-31/1920img4d31@x1.webp" type="image/webp">
@@ -43,7 +44,7 @@
           </button>
         </li>
         <li class="swiper-slide product__info-slide">
-          <button class="btn-reset product__swiper-btn">
+          <button class="btn-reset product__swiper-btn product-button" data-graph-path="large">
             <picture>
               <source srcset="img/productD-31/1920img5d31@x1.avif" type="image/avif">
               <source srcset="img/productD-31/1920img5d31@x1.webp" type="image/webp">
