feat: add style modal image product page

--- a/src/partials/productModalImage.html
+++ b/src/partials/productModalImage.html
@@ -1,111 +1,102 @@
-<div class="graph-modal">
-  <div class="graph-modal__container" role="dialog" aria-modal="true" data-graph-target="large">
-    <button class="btn-reset js-modal-close graph-modal__close" aria-label="Закрыть модальное окно"></button>
-    <div class="graph-modal__content">
-      <div class="swiper product-large-modal product__info-large">
-        <ul class="list-reset swiper-wrapper">
-          <li class="swiper-slide product__info-slide">
-            <button class="btn-reset product__swiper-btn">
-              <picture>
-                <source srcset="img/productD-31/1920img1d31@x1.avif" type="image/avif">
-                <source srcset="img/productD-31/1920img1d31@x1.webp" type="image/webp">
-                <img loading="lazy" src="img/productD-31/1920img1d31@x1.png" class="product__info-image" width="624"
-                  height="245" alt="Первое большое изображение дивана тканевого прямого D-31">
-              </picture>
-            </button>
-          </li>
-          <li class="swiper-slide product__info-slide">
-            <button class="btn-reset product__swiper-btn">
-              <picture>
-                <source srcset="img/productD-31/1920img2d31@x1.avif" type="image/avif">
-                <source srcset="img/productD-31/1920img2d31@x1.webp" type="image/webp">
-                <img loading="lazy" src="img/productD-31/1920img2d31@x1.png" class="product__info-image" width="495"
-                  height="245" alt="Первое большое изображение дивана тканевого прямого D-31">
-              </picture>
-            </button>
-          </li>
-          <li class="swiper-slide product__info-slide">
-            <button class="btn-reset product__swiper-btn">
-              <picture>
-                <source srcset="img/productD-31/1920img3d31@x1.avif" type="image/avif">
-                <source srcset="img/productD-31/1920img3d31@x1.webp" type="image/webp">
-                <img loading="lazy" src="img/productD-31/1920img3d31@x1.png" class="product__info-image" width="265"
-                  height="245" alt="Первое большое изображение дивана тканевого прямого D-31">
-              </picture>
-            </button>
-          </li>
-          <li class="swiper-slide product__info-slide">
-            <button class="btn-reset product__swiper-btn">
-              <picture>
-                <source srcset="img/productD-31/1920img4d31@x1.avif" type="image/avif">
-                <source srcset="img/productD-31/1920img4d31@x1.webp" type="image/webp">
-                <img loading="lazy" src="img/productD-31/1920img4d31@x1.png" class="product__info-image" width="538"
-                  height="245" alt="Первое большое изображение дивана тканевого прямого D-31">
-              </picture>
-            </button>
-          </li>
-          <li class="swiper-slide product__info-slide">
-            <button class="btn-reset product__swiper-btn">
-              <picture>
-                <source srcset="img/productD-31/1920img5d31@x1.avif" type="image/avif">
-                <source srcset="img/productD-31/1920img5d31@x1.webp" type="image/webp">
-                <img loading="lazy" src="img/productD-31/1920img5d31@x1.png" class="product__info-image" width="551"
-                  height="245" alt="Первое большое изображение дивана тканевого прямого D-31">
-              </picture>
-            </button>
-          </li>
-        </ul>
+<div class="product__modal graph-modal">
+  <div class="product__modal-container graph-modal__container container" role="dialog" aria-modal="true" data-graph-target="large">
+    <button class="btn-reset js-modal-close graph-modal__close product__modal-btn" aria-label="Закрыть модальное окно">
+      <svg class="product__modal-btn-img">
+        <use xlink:href="img/sprite.svg#closeModal"></use>
+      </svg>
+    </button>
+    <div class="product__modal-content">
+      <div class="product__modal-wrap-large">
+        <div class="swiper product__modal-large product-large-modal">
+          <ul class="list-reset swiper-wrapper product__modal-large-wrapper">
+            <li class="swiper-slide product__modal-large-slide">
+                <picture class="product__modal-large-picture">
+                  <source srcset="img/productD-31/1920img1d31@x1.avif" type="image/avif">
+                  <source srcset="img/productD-31/1920img1d31@x1.webp" type="image/webp">
+                  <img loading="lazy" src="img/productD-31/1920img1d31@x1.png" class="product__modal-large-image" width="1065" height="418" alt="Первое большое изображение дивана тканевого прямого D-31">
+                </picture>
+            </li>
+            <li class="swiper-slide product__modal-large-slide">
+                <picture class="product__modal-large-picture">
+                  <source srcset="img/productD-31/1920img2d31@x1.avif" type="image/avif">
+                  <source srcset="img/productD-31/1920img2d31@x1.webp" type="image/webp">
+                  <img loading="lazy" src="img/productD-31/1920img2d31@x1.png" class="product__modal-large-image" width="839"  height="418" alt="Первое большое изображение дивана тканевого прямого D-31">
+                </picture>
+            </li>
+            <li class="swiper-slide product__modal-large-slide">
+                <picture class="product__modal-large-picture">
+                  <source srcset="img/productD-31/1920img3d31@x1.avif" type="image/avif">
+                  <source srcset="img/productD-31/1920img3d31@x1.webp" type="image/webp">
+                  <img loading="lazy" src="img/productD-31/1920img3d31@x1.png" class="product__modal-large-image" width="447"  height="418" alt="Первое большое изображение дивана тканевого прямого D-31">
+                </picture>
+            </li>
+            <li class="swiper-slide product__modal-large-slide">
+                <picture class="product__modal-large-picture">
+                  <source srcset="img/productD-31/1920img4d31@x1.avif" type="image/avif">
+                  <source srcset="img/productD-31/1920img4d31@x1.webp" type="image/webp">
+                  <img loading="lazy" src="img/productD-31/1920img4d31@x1.png" class="product__modal-large-image" width="913" height="418" alt="Первое большое изображение дивана тканевого прямого D-31">
+                </picture>
+            </li>
+            <li class="swiper-slide product__modal-large-slide">
+                <picture class="product__modal-large-picture">
+                  <source srcset="img/productD-31/1920img5d31@x1.avif" type="image/avif">
+                  <source srcset="img/productD-31/1920img5d31@x1.webp" type="image/webp">
+                  <img loading="lazy" src="img/productD-31/1920img5d31@x1.png" class="product__modal-large-image" width="933" height="418" alt="Первое большое изображение дивана тканевого прямого D-31">
+                </picture>
+            </li>
+          </ul>
+        </div>
       </div>
-      <div class="product__box">
-        <div class="swiper product__box-swiper product-small-mobile">
-          <ul class="list-reset swiper-wrapper">
-            <li class="swiper-slide product__box-slide">
-              <button class="btn-reset product__swiper-btn">
+      <div class="product__modal-small">
+        <div class="swiper product__small-swiper product-small-modal">
+          <ul class="list-reset swiper-wrapper product__modal-small-wrapper">
+            <li class="swiper-slide product__modal-small-slide">
+              <button class="btn-reset product__small-btn">
                 <picture>
                   <source srcset="img/productD-31/1920img1d31@x1.avif" type="image/avif">
                   <source srcset="img/productD-31/1920img1d31@x1.webp" type="image/webp">
-                  <img loading="lazy" src="img/productD-31/1920img1d31@x1.png" class="product__box-image" width="123"
-                    height="61" alt="Первое большое изображение дивана тканевого прямого D-31">
+                  <img loading="lazy" src="img/productD-31/1920img1d31@x1.png" class="product__small-image" width="321"
+                    height="126" alt="Первое большое изображение дивана тканевого прямого D-31">
                 </picture>
               </button>
             </li>
-            <li class="swiper-slide product__box-slide">
-              <button class="btn-reset product__swiper-btn">
+            <li class="swiper-slide product__modal-small-slide">
+              <button class="btn-reset product__small-btn">
                 <picture>
                   <source srcset="img/productD-31/1920img2d31@x1.avif" type="image/avif">
                   <source srcset="img/productD-31/1920img2d31@x1.webp" type="image/webp">
-                  <img loading="lazy" src="img/productD-31/1920img2d31@x1.png" class="product__box-image" width="123"
-                    height="61" alt="Первое большое изображение дивана тканевого прямого D-31">
+                  <img loading="lazy" src="img/productD-31/1920img2d31@x1.png" class="product__small-image" width="253"
+                    height="126" alt="Первое большое изображение дивана тканевого прямого D-31">
                 </picture>
               </button>
             </li>
-            <li class="swiper-slide product__box-slide">
-              <button class="btn-reset product__swiper-btn">
+            <li class="swiper-slide product__modal-small-slide">
+              <button class="btn-reset product__small-btn">
                 <picture>
                   <source srcset="img/productD-31/1920img3d31@x1.avif" type="image/avif">
                   <source srcset="img/productD-31/1920img3d31@x1.webp" type="image/webp">
-                  <img loading="lazy" src="img/productD-31/1920img3d31@x1.png" class="product__box-image" width="66"
-                    height="61" alt="Первое большое изображение дивана тканевого прямого D-31">
+                  <img loading="lazy" src="img/productD-31/1920img3d31@x1.png" class="product__small-image" width="135"
+                    height="126" alt="Первое большое изображение дивана тканевого прямого D-31">
                 </picture>
               </button>
             </li>
-            <li class="swiper-slide product__box-slide">
-              <button class="btn-reset product__swiper-btn">
+            <li class="swiper-slide product__modal-small-slide">
+              <button class="btn-reset product__small-btn">
                 <picture>
                   <source srcset="img/productD-31/1920img4d31@x1.avif" type="image/avif">
                   <source srcset="img/productD-31/1920img4d31@x1.webp" type="image/webp">
-                  <img loading="lazy" src="img/productD-31/1920img4d31@x1.png" class="product__box-image" width="134"
-                    height="61" alt="Первое большое изображение дивана тканевого прямого D-31">
+                  <img loading="lazy" src="img/productD-31/1920img4d31@x1.png" class="product__small-image" width="275"
+                    height="126" alt="Первое большое изображение дивана тканевого прямого D-31">
                 </picture>
               </button>
             </li>
-            <li class="swiper-slide product__box-slide">
-              <button class="btn-reset product__swiper-btn">
+            <li class="swiper-slide product__modal-small-slide">
+              <button class="btn-reset product__small-btn">
                 <picture>
                   <source srcset="img/productD-31/1920img5d31@x1.avif" type="image/avif">
                   <source srcset="img/productD-31/1920img5d31@x1.webp" type="image/webp">
-                  <img loading="lazy" src="img/productD-31/1920img5d31@x1.png" class="product__box-image" width="137"
-                    height="61" alt="Первое большое изображение дивана тканевого прямого D-31">
+                  <img loading="lazy" src="img/productD-31/1920img5d31@x1.png" class="product__small-image" width="281"
+                    height="126" alt="Первое большое изображение дивана тканевого прямого D-31">
                 </picture>
               </button>
             </li>
