--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -25,6 +25,7 @@
   --grey-color: #999999;
   --grey-shade-color: #666666;
   --night-rider-color: #333333;
+  --night-rider-03-color: rgba(51, 51, 51, .3);
   --lime-color: #DAFFD1;
   --bone-color: #FFF5D1;
   --black-color: #000000;
