--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -50,4 +50,5 @@
 @import "./components/catalogDropfilterPrice";
 @import "./components/catalogDropfilterDiscount";
 @import "./components/productInfoFirst";
+@import "./components/productModalImage";
 
