--- a/src/partials/productD-31InfoFirst.html
+++ b/src/partials/productD-31InfoFirst.html
@@ -1,116 +1,7 @@
 <div class="container">
-  @include('productModalImage.html')
+  @include('productD-31ModalImage.html')
   <div class="product__info-first">
-    <div class="swiper product-large product__info-large">
-      <ul class="list-reset swiper-wrapper">
-        <li class="swiper-slide product__info-slide">
-          <button class="btn-reset product__swiper-btn product-button" data-graph-path="large">
-            <picture>
-              <source srcset="img/productD-31/1920img1d31@x1.avif" type="image/avif">
-              <source srcset="img/productD-31/1920img1d31@x1.webp" type="image/webp">
-              <img loading="lazy" src="img/productD-31/1920img1d31@x1.png" class="product__info-image" width="624" height="245"
-                alt="Первое большое изображение дивана тканевого прямого D-31">
-            </picture>
-          </button>
-        </li>
-        <li class="swiper-slide product__info-slide">
-          <button class="btn-reset product__swiper-btn product-button" data-graph-path="large">
-            <picture>
-              <source srcset="img/productD-31/1920img2d31@x1.avif" type="image/avif">
-              <source srcset="img/productD-31/1920img2d31@x1.webp" type="image/webp">
-              <img loading="lazy" src="img/productD-31/1920img2d31@x1.png" class="product__info-image" width="495" height="245"
-                alt="Первое большое изображение дивана тканевого прямого D-31">
-            </picture>
-          </button>
-        </li>
-        <li class="swiper-slide product__info-slide">
-          <button class="btn-reset product__swiper-btn product-button" data-graph-path="large">
-            <picture>
-              <source srcset="img/productD-31/1920img3d31@x1.avif" type="image/avif">
-              <source srcset="img/productD-31/1920img3d31@x1.webp" type="image/webp">
-              <img loading="lazy" src="img/productD-31/1920img3d31@x1.png" class="product__info-image" width="265" height="245"
-                alt="Первое большое изображение дивана тканевого прямого D-31">
-            </picture>
-          </button>
-        </li>
-        <li class="swiper-slide product__info-slide">
-          <button class="btn-reset product__swiper-btn product-button" data-graph-path="large">
-            <picture>
-              <source srcset="img/productD-31/1920img4d31@x1.avif" type="image/avif">
-              <source srcset="img/productD-31/1920img4d31@x1.webp" type="image/webp">
-              <img loading="lazy" src="img/productD-31/1920img4d31@x1.png" class="product__info-image" width="538" height="245"
-                alt="Первое большое изображение дивана тканевого прямого D-31">
-            </picture>
-          </button>
-        </li>
-        <li class="swiper-slide product__info-slide">
-          <button class="btn-reset product__swiper-btn product-button" data-graph-path="large">
-            <picture>
-              <source srcset="img/productD-31/1920img5d31@x1.avif" type="image/avif">
-              <source srcset="img/productD-31/1920img5d31@x1.webp" type="image/webp">
-              <img loading="lazy" src="img/productD-31/1920img5d31@x1.png" class="product__info-image" width="551" height="245"
-                alt="Первое большое изображение дивана тканевого прямого D-31">
-            </picture>
-          </button>
-        </li>
-      </ul>
-    </div>
-    <div class="product__box">
-      <div class="swiper product__box-swiper product-small">
-        <ul class="list-reset swiper-wrapper">
-          <li class="swiper-slide product__box-slide">
-            <button class="btn-reset product__swiper-btn">
-              <picture>
-                <source srcset="img/productD-31/1920img1d31@x1.avif" type="image/avif">
-                <source srcset="img/productD-31/1920img1d31@x1.webp" type="image/webp">
-                <img loading="lazy" src="img/productD-31/1920img1d31@x1.png" class="product__box-image" width="123" height="61"
-                  alt="Первое большое изображение дивана тканевого прямого D-31">
-              </picture>
-            </button>
-          </li>
-          <li class="swiper-slide product__box-slide">
-            <button class="btn-reset product__swiper-btn">
-              <picture>
-                <source srcset="img/productD-31/1920img2d31@x1.avif" type="image/avif">
-                <source srcset="img/productD-31/1920img2d31@x1.webp" type="image/webp">
-                <img loading="lazy" src="img/productD-31/1920img2d31@x1.png" class="product__box-image" width="123" height="61"
-                  alt="Первое большое изображение дивана тканевого прямого D-31">
-              </picture>
-            </button>
-          </li>
-          <li class="swiper-slide product__box-slide">
-            <button class="btn-reset product__swiper-btn">
-              <picture>
-                <source srcset="img/productD-31/1920img3d31@x1.avif" type="image/avif">
-                <source srcset="img/productD-31/1920img3d31@x1.webp" type="image/webp">
-                <img loading="lazy" src="img/productD-31/1920img3d31@x1.png" class="product__box-image" width="66" height="61"
-                  alt="Первое большое изображение дивана тканевого прямого D-31">
-              </picture>
-            </button>
-          </li>
-          <li class="swiper-slide product__box-slide">
-            <button class="btn-reset product__swiper-btn">
-              <picture>
-                <source srcset="img/productD-31/1920img4d31@x1.avif" type="image/avif">
-                <source srcset="img/productD-31/1920img4d31@x1.webp" type="image/webp">
-                <img loading="lazy" src="img/productD-31/1920img4d31@x1.png" class="product__box-image" width="134" height="61"
-                  alt="Первое большое изображение дивана тканевого прямого D-31">
-              </picture>
-            </button>
-          </li>
-          <li class="swiper-slide product__box-slide">
-            <button class="btn-reset product__swiper-btn">
-              <picture>
-                <source srcset="img/productD-31/1920img5d31@x1.avif" type="image/avif">
-                <source srcset="img/productD-31/1920img5d31@x1.webp" type="image/webp">
-                <img loading="lazy" src="img/productD-31/1920img5d31@x1.png" class="product__box-image" width="137" height="61"
-                  alt="Первое большое изображение дивана тканевого прямого D-31">
-              </picture>
-            </button>
-          </li>
-        </ul>
-      </div>
-    </div>
-    <div class="product__info-buy">gfdgfdgd</div>
+    @include('productD-31SwiperImageFirst.html')
+    @include('productD-31BuyFirst.html')
   </div>
 </div>
