feat: add button buy in product page

--- a/src/scss/components/_productInfoFirst.scss
+++ b/src/scss/components/_productInfoFirst.scss
@@ -23,6 +23,10 @@
 
     &-buy {
       grid-column: 7/13;
+      grid-row: 1/3;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
     }
   }
 }
