feat: add style in pruductD-31BuyFirst

--- a/src/partials/productD-31BuyFirst.html
+++ b/src/partials/productD-31BuyFirst.html
@@ -8,6 +8,6 @@
   <h2 class="product__info-buy-title card__title">Диван тканевый прямой <no-typography>“D-31”</no-typography></h2>
   <p class="product__info-buy-text">Мини 120 см без ящика Stark синий (Рогожка)</p>
   <span class="product__info-buy-price">28 490 руб</span>
-  <button class="btn-reset btn-all product__info-buy-click-btn">Купить в один клик</button>
-  <button class="btn-reset product__info-buy-basket-btn">+ Добавить в корзину</button>
+  <button class="btn-reset btn-all product__info-buy-click-btn" type="button">Купить в один клик</button>
+  <button class="btn-reset product__info-buy-basket-btn" type="button">+ Добавить в корзину</button>
 </div>
