--- a/src/scss/components/_productD-31ModalImage.scss
+++ b/src/scss/components/_productD-31ModalImage.scss
@@ -28,6 +28,7 @@
 
     &-small {
       padding: 20px 51px;
+      border-radius: 0 0 10px 10px;
       background-color: var(--grey-light-color);
     }
 
