--- a/src/scss/components/_productD-31InfoSecond.scss
+++ b/src/scss/components/_productD-31InfoSecond.scss
@@ -5,6 +5,17 @@
       grid-template-columns: repeat(12, 1fr);
       grid-auto-rows: auto;
       column-gap: 32px;
+
+      &-left {
+        grid-column: 1/7;
+        min-height: 375px;
+        display: flex;
+        flex-direction: column;
+      }
+
+      &-right {
+        grid-column: 7/13;
+      }
     }
   }
 }
