--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -54,4 +54,7 @@
 @import "./components/productD-31ModalImage";
 @import "./components/productD-31BuyFirst";
 @import "./components/productD-31InfoSecond";
+@import "./components/productD-31InfoSecondLeft";
+@import "./components/productD-31InfoSecondRight";
+@import "./components/productD-31SimilarSection";
 
