feat: add section similar in page product

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -49,6 +49,7 @@
 @import "./components/catalogDropfilterCategory";
 @import "./components/catalogDropfilterPrice";
 @import "./components/catalogDropfilterDiscount";
+@import "./components/productD-31InfoSection";
 @import "./components/productD-31InfoFirst";
 @import "./components/productD-31SwiperImage";
 @import "./components/productD-31ModalImage";
