--- a/src/scss/components/_productD-31InfoFirst.scss
+++ b/src/scss/components/_productD-31InfoFirst.scss
@@ -6,7 +6,7 @@
       grid-template-columns: repeat(12, 1fr);
       grid-template-rows: minmax(245px, auto) minmax(81px, auto);
       column-gap: 32px;
-      row-gap: 16px;
+      row-gap: 11px;
     }
 
     &-large {
@@ -18,11 +18,12 @@
       max-width: 100%;
       grid-column: 1/7;
       grid-row: 2/3;
-      padding: 10px 25px;
+      padding: 10px 24px 6px 22px;
       background-color: var(--grey-light-color);
     }
 
     &-buy {
+      padding-top: 16px;
       grid-column: 7/13;
       grid-row: 1/3;
       display: flex;
