--- a/src/scss/components/_productD-31InfoSecondLeft.scss
+++ b/src/scss/components/_productD-31InfoSecondLeft.scss
@@ -4,6 +4,7 @@
       &-left {
         &-title {
           margin-bottom: 8px;
+          margin-left: -1px;
           font-weight: 600;
           font-size: 16px;
           line-height: 100%;
@@ -16,12 +17,13 @@
           color: var(--night-rider-color);
 
           &--first {
-            margin-bottom: 10px;
+            margin-bottom: 8px;
           }
         }
 
         &-img {
           margin-top: auto;
+          padding-bottom: 0.5px;
           display: flex;
           column-gap: 32px;
         }
