--- a/src/scss/components/_productD-31InfoSection.scss
+++ b/src/scss/components/_productD-31InfoSection.scss
@@ -1,3 +1,13 @@
+.site-container--product {
+  .header {
+    margin-bottom: 17px;
+  }
+
+  .breadcrumbs__container {
+    margin-bottom: 30px;
+  }
+}
+
 .product {
   margin-bottom: 82px;
 }
