feat: add mobal buy one click in product card

--- a/src/partials/productD-31InfoFirst.html
+++ b/src/partials/productD-31InfoFirst.html
@@ -1,5 +1,5 @@
 <div class="container">
-  @include('productD-31ModalImage.html')
+  @include('productModal.html')
   <div class="product__info-first">
     @include('productD-31SwiperImageFirst.html')
     @include('productD-31BuyFirst.html')
