--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -52,8 +52,10 @@
 @import "./components/productD-31InfoSection";
 @import "./components/productD-31InfoFirst";
 @import "./components/productD-31SwiperImage";
+@import "./components/productModal";
 @import "./components/productD-31ModalImage";
 @import "./components/productD-31BuyFirst";
+@import "./components/productBuyOneClickModal";
 @import "./components/productD-31InfoSecond";
 @import "./components/productD-31InfoSecondLeft";
 @import "./components/productD-31InfoSecondRight";
