feat: add validation form in product card

--- a/src/partials/productModalBuyOneClick.html
+++ b/src/partials/productModalBuyOneClick.html
@@ -6,5 +6,25 @@
   </button>
   <div class="graph-modal__content product__buy-content">
     <h2 class="product__buy-title">Купить в один клик</h2>
+    <p class="product__buy-text">
+      Чтобы оформить заказ — заполните формы ниже и наш менеджер свяжется с вами в течении часа.
+    </p>
+
+    <form action="#" class="product__buy-form buy-form">
+      <label class="form__label">
+        <input type="text" name="Имя" class="input-reset form__input input-name" placeholder="Как вас зовут?">
+      </label>
+      <label class="form__label">
+        <input type="tel" name="Телефон" class="input-reset form__input input-tel" placeholder="Ваш телефон">
+      </label>
+      <button class="btn-reset form__btn">Отправить</button>
+    </form>
   </div>
 </div>
+
+<!-- <label class="feedback__form-label">
+  <input type="text" name="Имя" class="input-reset feedback__form-input input-name" placeholder="Как вас зовут?">
+</label>
+<label class="feedback__form-label">
+  <input type="tel" name="Телефон" class="input-reset feedback__form-input input-tel" placeholder="Ваш телефон">
+</label> -->
