--- a/src/partials/productModalBuyOneClick.html
+++ b/src/partials/productModalBuyOneClick.html
@@ -11,20 +11,20 @@
     </p>
 
     <form action="#" class="product__buy-form buy-form">
-      <label class="form__label">
-        <input type="text" name="Имя" class="input-reset form__input input-name" placeholder="Как вас зовут?">
+      <label class="product__buy-form-label">
+        <input type="text" name="Имя" class="input-reset product__buy-form-input input-name" placeholder="Как вас зовут?">
       </label>
-      <label class="form__label">
-        <input type="tel" name="Телефон" class="input-reset form__input input-tel" placeholder="Ваш телефон">
+      <label class="product__buy-form-label">
+        <input type="tel" name="Телефон" class="input-reset product__buy-form-input input-tel" placeholder="Ваш телефон">
       </label>
-      <button class="btn-reset form__btn">Отправить</button>
+      <button class="btn-reset btn-all product__buy-form-btn">Отправить</button>
+      <div class="product__buy-form-checkbox">
+        <input class="visually-hidden product__buy-form-checkbox-hidden" id="product__buy-form-checkbox-hidden" type="checkbox" name="feedbackFormAgreement" value="yes" checked required>
+        <label class="btn-reset product__buy-form-checkbox-text" for="product__buy-form-checkbox-hidden">
+            Принимаю
+          <a href="#no-scrolling" class="product__buy-form-checkbox-link">пользовательское соглашение</a>
+        </label>
+      </div>
     </form>
   </div>
 </div>
-
-<!-- <label class="feedback__form-label">
-  <input type="text" name="Имя" class="input-reset feedback__form-input input-name" placeholder="Как вас зовут?">
-</label>
-<label class="feedback__form-label">
-  <input type="tel" name="Телефон" class="input-reset feedback__form-input input-tel" placeholder="Ваш телефон">
-</label> -->
