--- a/src/scss/components/_productBuyOneClickModal.scss
+++ b/src/scss/components/_productBuyOneClickModal.scss
@@ -1,6 +1,5 @@
 .product {
   &__buy {
-
     &-container {
       padding: 30px;
       max-width: 624px;
@@ -16,6 +15,7 @@
     }
 
     &-text {
+      margin-bottom: 30px;
       max-width: 374px;
       font-size: 14px;
       line-height: 19px;
@@ -25,7 +25,162 @@
     &-form {
       display: flex;
       flex-direction: column;
+      align-items: flex-start;
       width: 100%;
+
+      &-label {
+        margin-bottom: 30px;
+        position: relative;
+        width: 100%;
+      }
+
+      &-input {
+        padding-left: 18px;
+        width: 100%;
+        height: 54px;
+        border-radius: 10px;
+        background-color: var(--grey-light-color);
+        font-size: 16px;
+        line-height: 40px;
+        color: var(--night-rider-color);
+        outline: none;
+        border: 1px solid transparent;
+        transition: background-color 0.3s ease-in-out, border 0.3s ease-in-out;
+
+        &::placeholder {
+          font-size: 16px;
+          line-height: 40px;
+          color: var(--grey-color);
+        }
+
+        @include hover {
+          + & {
+            background-color: var(--md-grey-color);
+          }
+        }
+
+        &:focus-visible:not(:hover):not(:active) {
+          border-color: var(--primary-color);
+          background-color: var(---pink-light-color);
+        }
+
+        &.just-validate-success-field {
+          border-color: var(--green-input-color);
+        }
+
+        &.just-validate-error-field {
+          border-color: var(--red-input-color);
+        }
+      }
+
+      & .just-validate-error-label {
+        position: absolute;
+        top: -18px;
+        left: 18px;
+        font-size: 12px;
+        line-height: 16px;
+        color: var(--red-input-color) !important;
+      }
+
+      &-btn {
+        margin-bottom: 12px;
+        padding: 17px 33.5px;
+        background-color: var(--primary-color);
+        color: var(--white-color);
+
+        @include hover {
+          + & {
+            border-color: var(--primary-light-color);
+            background-color: var(--primary-light-color);
+          }
+        }
+
+        &:focus-visible:not(:hover):not(:active) {
+          border-color: var(--primary-shade-color);
+          background-color: var(--primary-light-color);
+        }
+
+        &:active {
+          border-color: var(--primary-shade-color);
+          background-color: var(--primary-shade-color);
+        }
+      }
+
+      &-checkbox {
+        position: relative;
+
+        &-text[for] {
+          cursor: pointer;
+        }
+
+        &-text {
+          position: relative;
+          z-index: 0;
+          outline: 2px solid transparent;
+          outline-offset: 2px;
+          font-size: 14px;
+          line-height: 19px;
+          color: var(--night-rider-color);
+          border-radius: 5px;
+          padding: 0 5px 0 27px;
+          margin-left: -5px;
+
+          @include mobile {
+            & {
+              padding: 0 5px 0 25px;
+              font-size: 12px;
+              line-height: 16px;
+            }
+          }
+        }
+
+        &-hidden:checked + .product__buy-form-checkbox-text::before {
+          border-color: var(--primary-color);
+          background-image: url(../img/checkbox.svg);
+          background-color: var(--primary-color);
+        }
+
+        &-text::before {
+          content: '';
+          position: absolute;
+          left: 5px;
+          top: 50%;
+          display: inline-block;
+          border: 1px solid var(--grey-color);
+          border-radius: 2px;
+          width: 14px;
+          height: 14px;
+          background-position: center;
+          background-size: 11px 9px;
+          background-repeat: no-repeat;
+          transform: translateY(-50%);
+          transition: border-color .3s ease-in-out, background-color .3s ease-in-out, box-shadow .3s ease-in-out;
+        }
+
+        .product__buy-form-checkbox-hidden:focus-visible:not(:active):not(:hover) + .product__buy-form-checkbox-text {
+          box-shadow: 0px 0px 7px 3px var(--primary-light-color);
+        }
+
+
+        &-link {
+          padding: 0 2px;
+          margin-left: -2px;
+          border-radius: 5px;
+          text-decoration: underline;
+          color: var(--primary-color);
+          transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
+
+          @include hover {
+            + & {
+              color: var(--primary-light-color);
+            }
+          }
+
+          &:focus-visible:not(:hover):not(:active) {
+            box-shadow: 0px 0px 7px 3px var(--primary-light-color);
+          }
+        }
+      }
     }
   }
 }
