--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -56,6 +56,7 @@
 @import "./components/productD-31ModalImage";
 @import "./components/productD-31BuyFirst";
 @import "./components/productBuyOneClickModal";
+@import "./components/productModalSuccess";
 @import "./components/productD-31InfoSecond";
 @import "./components/productD-31InfoSecondLeft";
 @import "./components/productD-31InfoSecondRight";
