feat: add adaptive 1024 in product page

--- a/src/partials/productD-31InfoSecondLeft.html
+++ b/src/partials/productD-31InfoSecondLeft.html
@@ -7,7 +7,7 @@
     Этот механизм не портит пол и не боится ковров. Требуется чуть больше силы, чтобы разложить диван, но подросток справится.
   </p>
   <div class="product__info-second-left-img">
-    <img loading="lazy" src="img/productD-31/sofaClose.svg" class="product__info-second-left-img-first" width="247" height="113" alt="Первый этап работы механизма дивана D-31">
-    <img loading="lazy" src="img/productD-31/sofaOpen.svg" class="product__info-second-left-img-second" width="247" height="113" alt="Второй этап работы механизма дивана D-31">
+    <img loading="lazy" src="img/productD-31/sofaClose.svg" class="product__info-second-left-image product__info-second-left-img-first" width="247" height="113" alt="Первый этап работы механизма дивана D-31">
+    <img loading="lazy" src="img/productD-31/sofaOpen.svg" class="product__info-second-left-image product__info-second-left-img-second" width="247" height="113" alt="Второй этап работы механизма дивана D-31">
   </div>
 </div>
