--- a/src/partials/productD-31SwiperImageFirst.html
+++ b/src/partials/productD-31SwiperImageFirst.html
@@ -5,7 +5,7 @@
         <picture>
           <source srcset="img/productD-31/1920img1d31@x1.avif" type="image/avif">
           <source srcset="img/productD-31/1920img1d31@x1.webp" type="image/webp">
-          <img loading="lazy" src="img/productD-31/1920img1d31@x1.png" class="product__info-image" width="624" height="245"
+          <img loading="lazy" src="img/productD-31/1920img1d31@x1.png" class="product__info-large-image" width="624" height="245"
             alt="Первое большое изображение дивана тканевого прямого D-31">
         </picture>
       </button>
@@ -15,7 +15,7 @@
         <picture>
           <source srcset="img/productD-31/1920img2d31@x1.avif" type="image/avif">
           <source srcset="img/productD-31/1920img2d31@x1.webp" type="image/webp">
-          <img loading="lazy" src="img/productD-31/1920img2d31@x1.png" class="product__info-image" width="495" height="245"
+          <img loading="lazy" src="img/productD-31/1920img2d31@x1.png" class="product__info-large-image" width="495" height="245"
             alt="Первое большое изображение дивана тканевого прямого D-31">
         </picture>
       </button>
@@ -25,7 +25,7 @@
         <picture>
           <source srcset="img/productD-31/1920img3d31@x1.avif" type="image/avif">
           <source srcset="img/productD-31/1920img3d31@x1.webp" type="image/webp">
-          <img loading="lazy" src="img/productD-31/1920img3d31@x1.png" class="product__info-image" width="265" height="245"
+          <img loading="lazy" src="img/productD-31/1920img3d31@x1.png" class="product__info-large-image" width="265" height="245"
             alt="Первое большое изображение дивана тканевого прямого D-31">
         </picture>
       </button>
@@ -35,7 +35,7 @@
         <picture>
           <source srcset="img/productD-31/1920img4d31@x1.avif" type="image/avif">
           <source srcset="img/productD-31/1920img4d31@x1.webp" type="image/webp">
-          <img loading="lazy" src="img/productD-31/1920img4d31@x1.png" class="product__info-image" width="538" height="245"
+          <img loading="lazy" src="img/productD-31/1920img4d31@x1.png" class="product__info-large-image" width="538" height="245"
             alt="Первое большое изображение дивана тканевого прямого D-31">
         </picture>
       </button>
@@ -45,7 +45,7 @@
         <picture>
           <source srcset="img/productD-31/1920img5d31@x1.avif" type="image/avif">
           <source srcset="img/productD-31/1920img5d31@x1.webp" type="image/webp">
-          <img loading="lazy" src="img/productD-31/1920img5d31@x1.png" class="product__info-image" width="551" height="245"
+          <img loading="lazy" src="img/productD-31/1920img5d31@x1.png" class="product__info-large-image" width="551" height="245"
             alt="Первое большое изображение дивана тканевого прямого D-31">
         </picture>
       </button>
