--- a/src/partials/productModalBuyOneClick.html
+++ b/src/partials/productModalBuyOneClick.html
@@ -17,7 +17,7 @@
       <label class="product__buy-form-label">
         <input type="tel" name="Телефон" class="input-reset product__buy-form-input input-tel" placeholder="Ваш телефон">
       </label>
-      <button class="btn-reset btn-all product__buy-form-btn" data-graph-path="success" type="button">Отправить</button>
+      <button class="btn-reset btn-all product__buy-form-btn" data-graph-path="success" type="submit">Отправить</button>
       <div class="product__buy-form-checkbox">
         <input class="visually-hidden product__buy-form-checkbox-hidden" id="product__buy-form-checkbox-hidden" type="checkbox" name="feedbackFormAgreement" value="yes" checked required>
         <label class="btn-reset product__buy-form-checkbox-text" for="product__buy-form-checkbox-hidden">
