--- a/src/scss/components/_productD-31InfoSection.scss
+++ b/src/scss/components/_productD-31InfoSection.scss
@@ -1,13 +1,31 @@
 .site-container--product {
   .header {
     margin-bottom: 17px;
+
+    @include tablet {
+      & {
+        margin-bottom: 20px;
+      }
+    }
   }
 
   .breadcrumbs__container {
     margin-bottom: 30px;
+
+    @include high-desktop {
+      & {
+        margin-bottom: 31.2px;
+      }
+    }
   }
 }
 
 .product {
   margin-bottom: 82px;
+
+  @include high-desktop {
+    & {
+      margin-bottom: 71.3px;
+    }
+  }
 }
