--- a/src/scss/components/_productD-31SwiperImage.scss
+++ b/src/scss/components/_productD-31SwiperImage.scss
@@ -11,6 +11,14 @@
       &-btn {
         cursor: zoom-in;
       }
+
+      &-image {
+        @include high-desktop {
+          & {
+            height: 201px;
+          }
+        }
+      }
     }
 
     &-box {
