--- a/src/scss/components/_productD-31InfoFirst.scss
+++ b/src/scss/components/_productD-31InfoFirst.scss
@@ -7,11 +7,25 @@
       grid-template-rows: minmax(245px, auto) minmax(81px, auto);
       column-gap: 32px;
       row-gap: 11px;
+
+      @include high-desktop {
+        & {
+          grid-template-columns: repeat(9, 1fr);
+          grid-template-rows: minmax(201px, auto) minmax(81px, auto);
+          row-gap: 13px;
+        }
+      }
     }
 
     &-large {
       max-width: 100%;
       grid-column: 1/7;
+
+      @include high-desktop {
+        & {
+          grid-column: 1/6;
+        }
+      }
     }
 
     &-box {
@@ -20,6 +34,13 @@
       grid-row: 2/3;
       padding: 10px 24px 6px 22px;
       background-color: var(--grey-light-color);
+
+      @include high-desktop {
+        & {
+          grid-column: 1/6;
+          padding: 10px 0px 6px 11px;
+        }
+      }
     }
 
     &-buy {
@@ -29,6 +50,14 @@
       display: flex;
       flex-direction: column;
       align-items: flex-start;
+
+      @include high-desktop {
+        & {
+          grid-column: 6/10;
+          padding-top: 13.8px;
+          padding-left: 0.5px;
+        }
+      }
     }
   }
 }
