--- a/src/scss/components/_productD-31SimilarSection.scss
+++ b/src/scss/components/_productD-31SimilarSection.scss
@@ -14,6 +14,12 @@
       font-size: 24px;
       line-height: 130%;
       color: var(--night-rider-color);
+
+      @include high-desktop {
+        & {
+          padding-left: 0;
+        }
+      }
     }
   }
 
