--- a/src/scss/components/_productD-31InfoSecondLeft.scss
+++ b/src/scss/components/_productD-31InfoSecondLeft.scss
@@ -19,6 +19,12 @@
           &--first {
             margin-bottom: 8px;
           }
+
+          @include high-tablet {
+            & {
+              max-width: 514px;
+            }
+          }
         }
 
         &-img {
