--- a/src/scss/components/_productD-31InfoFirst.scss
+++ b/src/scss/components/_productD-31InfoFirst.scss
@@ -15,6 +15,20 @@
           row-gap: 13px;
         }
       }
+
+      @include high-tablet {
+        & {
+          grid-template-columns: repeat(6, 1fr);
+          row-gap: 30px;
+        }
+      }
+
+      @include mobile {
+        & {
+          grid-template-rows: minmax(144px, auto) minmax(81px, auto);
+          row-gap: 0;
+        }
+      }
     }
 
     &-large {
@@ -24,6 +38,18 @@
       @include high-desktop {
         & {
           grid-column: 1/6;
+        }
+      }
+
+      @include high-tablet {
+        & {
+          grid-column: 1/7;
+        }
+      }
+
+      @include mobile {
+        & {
+          height: 143.5px;
         }
       }
     }
@@ -41,6 +67,22 @@
           padding: 10px 0px 6px 11px;
         }
       }
+
+      @include high-tablet {
+        & {
+          grid-column: 1/3;
+          padding: 26px 3px 23px 3px;
+          height: 349px;
+        }
+      }
+
+      @include mobile {
+        & {
+          grid-column: 1/7;
+          padding: 0px 0px 0px 10px;
+          height: 81px;
+        }
+      }
     }
 
     &-buy {
@@ -55,6 +97,24 @@
         & {
           grid-column: 6/10;
           padding-top: 13.8px;
+          padding-left: 0.5px;
+        }
+      }
+
+      @include high-tablet {
+        & {
+          grid-column: 3/7;
+          grid-row: 2/3;
+          padding-top: 50px;
+          padding-left: 1.6px;
+        }
+      }
+
+      @include mobile {
+        & {
+          grid-column: 1/7;
+          grid-row: 3/4;
+          padding-top: 16.5px;
           padding-left: 0.5px;
         }
       }
